--- a/templates/sequence_visualisation.html
+++ b/templates/sequence_visualisation.html
@@ -65,6 +65,22 @@
             display: flex;
             align-items: center;
         }
+        body, html {
+            margin: 0;
+            padding: 0;
+        }
+
+        nav {
+            margin: 0;
+            padding: 0;
+        }
+        .navbar-buttons button {
+          margin-left: 10px;
+          background-color: rgb(87, 173, 87);
+          border: 1px solid transparent;
+          font-size: 18px;
+          cursor: pointer;
+      }
         
     </style>
 </head>
